@@ -2086,6 +2086,13 @@ editing sessions to be started from non-main threads.  The only platform
 where this remains unsupported is Nextstep (GNUstep or Mac OS).
 
 ---
+** 'desktop-restore-frames' has been disabled by default on Android systems.
+Restrictions imposed on clients by the window manager on these systems
+are too prohibitive to admit of restoring frame configurations, and on
+the same account many window management facilities are unimplemented by
+Emacs also.
+
+---
 ** 'NSSpeechRecognitionUsageDescription' now included in "Info.plist" (macOS).
 Should Emacs (or any built-in shell) invoke a process using macOS speech
 recognition APIs, the relevant permission dialog is now displayed, thus
